--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alex_brush</item>
         <item>@font/amita</item>
+        <item>@font/belleza</item>
     </array>
 </resources>
