--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -61,13 +62,14 @@
             android:layout_height="wrap_content"
             android:backgroundTint="white"
             android:elevation="35dp"
-            android:src="@drawable/google"
+            android:src="@drawable/twitter_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.636"
             app:layout_constraintStart_toEndOf="@+id/fab_google"
             app:layout_constraintTop_toTopOf="@+id/viewpager"
-            app:layout_constraintVertical_bias="0.95" />
+            app:layout_constraintVertical_bias="0.95"
+            android:layout_marginRight="10dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_fb"
@@ -75,13 +77,14 @@
             android:layout_height="wrap_content"
             android:backgroundTint="white"
             android:elevation="35dp"
-            android:src="@drawable/google"
+            android:src="@drawable/facebook_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fab_google"
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/viewpager"
-            app:layout_constraintVertical_bias="0.949" />
+            app:layout_constraintVertical_bias="0.949"
+            android:layout_marginLeft="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.tabs.TabItem
@@ -94,4 +97,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
