--- a/app/src/main/res/layout/signin_tab_fragment.xml
+++ b/app/src/main/res/layout/signin_tab_fragment.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/mobile_number"
         android:paddingLeft="20dp"
+        android:background="@drawable/edit_text_bg"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,8 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
         android:autofillHints="Password"
-        android:hint="@string/mobile_number"
+        android:hint="@string/password"
         android:paddingLeft="20dp"
+        android:background="@drawable/edit_text_bg"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
