--- a/app/src/main/res/layout/signup_tab_fragment.xml
+++ b/app/src/main/res/layout/signup_tab_fragment.xml
@@ -10,6 +10,7 @@
         android:id="@+id/phone_num"
         android:layout_width="309dp"
         android:layout_height="44dp"
+        android:background="@drawable/edit_text_bg"
         android:layout_marginTop="204dp"
         android:autofillHints="@string/mobile_number"
         android:hint="@string/mobile_number"
@@ -28,7 +29,8 @@
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
         android:autofillHints="First Name"
-        android:hint="@string/mobile_number"
+        android:background="@drawable/edit_text_bg"
+        android:hint="@string/first_name"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
@@ -42,6 +44,7 @@
         android:id="@+id/last_name"
         android:layout_width="309dp"
         android:layout_height="44dp"
+        android:background="@drawable/edit_text_bg"
         android:layout_marginTop="20dp"
         android:autofillHints="First Name"
         android:hint="@string/last_name"
@@ -59,6 +62,7 @@
         android:layout_width="309dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/edit_text_bg"
         android:autofillHints="First Name"
         android:hint="@string/password"
         android:paddingStart="20dp"
