--- a/app/src/main/res/layout/fragment_onboarding3.xml
+++ b/app/src/main/res/layout/fragment_onboarding3.xml
@@ -56,6 +56,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="89dp"
         android:layout_height="22dp"
         android:layout_marginTop="101dp"
@@ -69,5 +70,17 @@
         app:layout_constraintTop_toTopOf="@+id/text2"
         app:layout_constraintVertical_bias="0.571" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_login"
+        android:src="@drawable/next_icon"
+        app:backgroundTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.979" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
