--- a/app/src/main/res/layout/signin_tab_fragment.xml
+++ b/app/src/main/res/layout/signin_tab_fragment.xml
@@ -57,11 +57,12 @@
         app:layout_constraintWidth_percent=".8" />
 
     <TextView
+        android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:layout_marginBottom="34dp"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/password" />
