--- a/app/src/main/res/layout/signin_tab_fragment.xml
+++ b/app/src/main/res/layout/signin_tab_fragment.xml
@@ -7,53 +7,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
-        android:id="@+id/phone_num"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/mobile_number"
-        android:paddingLeft="20dp"
+        android:id="@+id/email_address"
+        android:layout_width="290dp"
+        android:layout_height="60dp"
         android:background="@drawable/edit_text_bg"
+        android:hint="@string/email_address"
+        android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.344"
+        app:layout_constraintVertical_bias="0.299"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="289dp"
+        android:layout_height="50dp"
         android:layout_marginTop="124dp"
         android:autofillHints="Password"
+        android:background="@drawable/edit_text_bg"
         android:hint="@string/password"
         android:paddingLeft="20dp"
-        android:background="@drawable/edit_text_bg"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.388"
+        app:layout_constraintVertical_bias="0.298"
         app:layout_constraintWidth_percent=".8" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="226dp"
+        android:layout_height="32dp"
         android:layout_marginTop="37dp"
+        android:background="@color/Black"
         android:text="@string/login"
+        android:textColor="@color/White"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:background="@drawable/button_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.248"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.146"
+        app:layout_constraintVertical_bias="0.175"
         app:layout_constraintWidth_percent=".8" />
 
     <TextView
@@ -65,6 +69,19 @@
         android:text="@string/forgot_password"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ProgressBar
+        android:id="@+id/login_progress"
+        android:layout_width="43dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="96dp"
+        android:visibility="invisible"
+        android:indeterminateTint="@color/Black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
