--- a/app/src/main/res/layout/signup_tab_fragment.xml
+++ b/app/src/main/res/layout/signup_tab_fragment.xml
@@ -7,27 +7,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
-        android:id="@+id/phone_num"
-        android:layout_width="309dp"
-        android:layout_height="44dp"
+        android:id="@+id/email_address"
+        android:layout_width="256dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="148dp"
+        android:autofillHints="@string/email_address"
         android:background="@drawable/edit_text_bg"
-        android:layout_marginTop="204dp"
-        android:autofillHints="@string/mobile_number"
-        android:hint="@string/mobile_number"
+        android:hint="@string/email_address"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/first_name"
-        android:layout_width="309dp"
+        android:layout_width="253dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:autofillHints="First Name"
         android:background="@drawable/edit_text_bg"
         android:hint="@string/first_name"
@@ -36,59 +37,77 @@
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.297"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phone_num"
+        app:layout_constraintTop_toBottomOf="@+id/email_address"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/last_name"
-        android:layout_width="309dp"
-        android:layout_height="44dp"
-        android:background="@drawable/edit_text_bg"
-        android:layout_marginTop="20dp"
+        android:layout_width="257dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="16dp"
         android:autofillHints="First Name"
+        android:background="@drawable/edit_text_bg"
         android:hint="@string/last_name"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_name"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="309dp"
+        android:layout_width="254dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/edit_text_bg"
+        android:layout_marginTop="16dp"
         android:autofillHints="First Name"
+        android:background="@drawable/edit_text_bg"
         android:hint="@string/password"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.299"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/last_name"
         app:layout_constraintWidth_percent=".8" />
 
     <Button
-        android:id="@+id/login"
-        android:layout_width="222dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="37dp"
+        android:id="@+id/sign_up"
+        android:layout_width="105dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginBottom="276dp"
+        android:background="@color/Black"
         android:text="@string/sign_up"
+        android:textColor="@color/White"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:background="@drawable/button_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.349"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.256"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent=".8" />
 
+    <ProgressBar
+        android:id="@+id/simpleProgressBar"
+        android:layout_width="38dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="276dp"
+        android:indeterminateTint="@color/Black"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up"
+        app:layout_constraintVertical_bias="0.479" />
 </androidx.constraintlayout.widget.ConstraintLayout>
