--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
+    <color name="Pink">#FFB6C1</color>
+
 </resources>
